--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,14 @@ dependencies:
   geolocator: ^13.0.4
   flutter_map: ^8.1.1
   latlong2: ^0.9.0
-  permission_handler: ^11.0.1
+  permission_handler: ^12.0.0+1
+  cupertino_icons: ^1.0.2
+  sqflite: ^2.3.0
+  path: ^1.8.3
+  connectivity_plus: ^6.1.3
+  uuid: ^4.2.1
+  path_provider: ^2.1.1
+
 
 dev_dependencies:
   flutter_test:
